# mattergen

./: README.md  pyproject.toml
tutorials/: mattergen_colab_tutorial.ipynb  mattergen_for_computational_chemistry_students.ipynb
